[ACPI] Fix IO-APIC mode SCI interrupt storm on Tyan http://bugzilla.kernel.org/show_bug.cgi?id=774